--- a/package.xml
+++ b/package.xml
@@ -14,11 +14,16 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>as_generic_msg</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>pcl_ros</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+
 
   <run_depend>roscpp</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>as_generic_msg</run_depend>
+  <run_depend>pcl_ros</run_depend>
+  <run_depend>geometry_msgs</run_depend>
 
 </package>
