- added fusion messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(catkin REQUIRED COMPONENTS
         as_generic_msg
         pcl_ros
         geometry_msgs
+        sensor_msgs
+        visualization_msgs
         )
 ## Declare ROS messages and services
 add_message_files(DIRECTORY msg FILES
@@ -21,12 +23,29 @@ add_message_files(DIRECTORY msg FILES
         lux_object_data.msg
         object_list.msg
         point2D.msg
+        resolution.msg
         size2D.msg
+        float2D.msg
         lux_vehicle_state.msg
+        test_point.msg
+        lux_header.msg
+        lux_error_warning.msg
+        lux_fusion_scan_data.msg
+        lux_fusion_scan_info.msg
+        lux_fusion_scan_point.msg
+        lux_fusion_scan_info_2205.msg
+        lux_fusion_scan_data_2205.msg
+        lux_fusion_object_data_2225.msg
+        object_list_2225.msg
+        lux_fusion_object_data_2280.msg
+        object_list_2280.msg
+        lux_fusion_img_2403.msg
+        mount_position.msg
+        lux_fusion_vehicle_state.msg
         )
 
 ## Generate added messages and services
-generate_messages(DEPENDENCIES std_msgs)
+generate_messages(DEPENDENCIES std_msgs geometry_msgs)
 
 ## Declare a catkin package
 catkin_package(CATKIN_DEPENDS
@@ -35,6 +54,8 @@ catkin_package(CATKIN_DEPENDS
         as_generic_msg
         pcl_ros
         geometry_msgs
+        sensor_msgs
+        visualization_msgs
         )
 
 ## Build executables
