--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,8 @@
   <build_depend>message_generation</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>geometry_msgs</build_depend>
-
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>message_runtime</run_depend>
@@ -25,5 +26,7 @@
   <run_depend>as_generic_msg</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>visualization_msgs</run_depend>
 
 </package>
