--- a/ibeo_lux/package.xml
+++ b/ibeo_lux/package.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0"?>
 <package>
   <name>ibeo_lux</name>
-  <version>0.1.0</version>
+  <version>1.2.0</version>
   <description>ROS driver for IBEO LUX</description>
 
   <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
   <license>Closed Source</license>
   <author email="jkale@autonomoustuff.com">Joe Kale</author>
+  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>network_interface</build_depend>
+  <build_depend>ibeo_lux_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
-  <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>network_interface</run_depend>
-
+  <run_depend>ibeo_lux_msgs</run_depend>
 </package>
