Changing license to LGPLv2.1 (same as Ibeo docs).

--- a/ibeo_lux/package.xml
+++ b/ibeo_lux/package.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0"?>
 <package>
   <name>ibeo_lux</name>
-  <version>1.2.0</version>
+  <version>1.6.0</version>
   <description>ROS driver for IBEO LUX</description>
+  <license>LGPLv2.1</license>
 
   <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
-  <license>Closed Source</license>
-  <author email="jkale@autonomoustuff.com">Joe Kale</author>
-  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <url type="bugtracker">https://bitbucket.org/autonomoustuff/ros_ibeo_lux/issues</url>
+  <url type="repository">https://bitbucket.org/autonomoustuff/ros_ibeo_lux</url>
+
+  <author email="jkale@autonomoustuff.com">Joe Kale</author>
+  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
 
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
@@ -18,6 +20,8 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>network_interface</build_depend>
   <build_depend>ibeo_lux_msgs</build_depend>
+
+  <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
