--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "core_ibeo_lux"]
-	path = ibeo_lux/core_ibeo_lux
-	url = git@bitbucket.org:autonomoustuff/core_ibeo_lux.git
+[submodule "ibeo_lux/core_ibeo"]
+	path = ibeo_lux/core_ibeo
+	url = git@bitbucket.org:autonomoustuff/core_ibeo
