--- a/ibeo_lux/package.xml
+++ b/ibeo_lux/package.xml
@@ -20,7 +20,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>network_interface</build_depend>
-  <build_depend>ibeo_lux_msgs</build_depend>
+  <build_depend>ibeo_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -29,5 +29,5 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>network_interface</run_depend>
-  <run_depend>ibeo_lux_msgs</run_depend>
+  <run_depend>ibeo_msgs</run_depend>
 </package>
