--- a/ibeo_lux/package.xml
+++ b/ibeo_lux/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>ibeo_lux</name>
   <version>2.0.0</version>
   <description>ROS driver for IBEO LUX</description>
@@ -14,20 +14,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>visualization_msgs</build_depend>
-  <build_depend>network_interface</build_depend>
-  <build_depend>ibeo_msgs</build_depend>
-
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>visualization_msgs</run_depend>
-  <run_depend>network_interface</run_depend>
-  <run_depend>ibeo_msgs</run_depend>
+  <depend>roscpp</depend>
+  <depend>std_msgs</depend>
+  <depend>pcl_ros</depend>
+  <depend>geometry_msgs</depend>
+  <depend>visualization_msgs</depend>
+  <depend>network_interface</depend>
+  <depend>ibeo_msgs</depend>
 </package>
