--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@ pipelines:
     - parallel:
       - step:
           name: Indigo
-          image: ros:indigo-robot
+          image: ros:indigo-desktop-full
           script:
             - apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
             - git submodule init && git submodule update
@@ -17,7 +17,7 @@ pipelines:
             - catkin build
       - step:
           name: Kinetic
-          image: ros:kinetic-robot
+          image: ros:kinetic-desktop-full
           script:
             - apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
             - git submodule init && git submodule update
@@ -31,7 +31,7 @@ pipelines:
             - catkin build
       - step:
           name: Lunar
-          image: ros:lunar-robot
+          image: ros:lunar-desktop-full
           script:
             - apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
             - git submodule init && git submodule update
