--- a/ibeo_lux/package.xml
+++ b/ibeo_lux/package.xml
@@ -16,6 +16,7 @@
 
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
+  <depend>ibeo_core</depend>
   <depend>pcl_ros</depend>
   <depend>geometry_msgs</depend>
   <depend>visualization_msgs</depend>
