--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,15 @@ notifications:
 
 env:
   matrix:
-    - ROS_DISTRO="indigo" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-ros-core
-    - ROS_DISTRO="indigo" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-ros-core
-    - ROS_DISTRO="kinetic" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-ros-core
-    - ROS_DISTRO="kinetic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-ros-core
+    - ROS_DISTRO="indigo" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-perception
+    - ROS_DISTRO="indigo" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-perception
+    - ROS_DISTRO="kinetic" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-perception
+    - ROS_DISTRO="kinetic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-perception
 
 matrix:
   allow_failures:
-    env: ROS_DISTRO="indigo" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-ros-core
-    env: ROS_DISTRO="kinetic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-ros-core
+    env: ROS_DISTRO="indigo" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-perception
+    env: ROS_DISTRO="kinetic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-perception
 
 install:
   git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
