--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,18 @@ notifications:
 env:
   matrix:
     - ROS_DISTRO="indigo" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-perception
-    - ROS_DISTRO="indigo" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-perception
     - ROS_DISTRO="kinetic" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-perception
     - ROS_DISTRO="kinetic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-perception
+    - ROS_DISTRO="lunar" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:lunar-perception
+    - ROS_DISTRO="lunar" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:lunar-perception
+    - ROS_DISTRO="melodic" ROS_REPO=ros UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:melodic-perception
+    - ROS_DISTRO="melodic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:melodic-perception
 
 matrix:
   allow_failures:
-    env: ROS_DISTRO="indigo" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:indigo-perception
-    env: ROS_DISTRO="kinetic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-perception
+    - env: ROS_DISTRO="kinetic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:kinetic-perception
+    - env: ROS_DISTRO="lunar" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:lunar-perception
+    - env: ROS_DISTRO="melodic" ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=file DOCKER_BASE_IMAGE=ros:melodic-perception
 
 install:
   git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
