--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@ version: 2
 jobs:
   indigo:
     docker:
-      - image: ros:indigo-perception
+      - image: autonomoustuff/docker-builds:indigo-perception
     steps:
       - checkout
       - run:
           name: Set Up Container
           command: |
-            apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
+            apt-get update -qq
             source `find /opt/ros -name setup.bash | sort | head -1`
             rosdep install --from-paths . --ignore-src -y
             cd ..
@@ -28,13 +28,13 @@ jobs:
 
   kinetic:
     docker:
-      - image: ros:kinetic-perception
+      - image: autonomoustuff/docker-builds:kinetic-perception
     steps:
       - checkout
       - run:
           name: Set Up Container
           command: |
-            apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
+            apt-get update -qq
             source `find /opt/ros -name setup.bash | sort | head -1`
             rosdep install --from-paths . --ignore-src -y
             cd ..
@@ -54,13 +54,13 @@ jobs:
 
   lunar:
     docker:
-      - image: ros:lunar-perception
+      - image: autonomoustuff/docker-builds:lunar-perception
     steps:
       - checkout
       - run:
           name: Set Up Container
           command: |
-            apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
+            apt-get update -qq
             source `find /opt/ros -name setup.bash | sort | head -1`
             rosdep install --from-paths . --ignore-src -y
             cd ..
@@ -80,13 +80,13 @@ jobs:
 
   melodic:
     docker:
-      - image: ros:melodic-perception
+      - image: autonomoustuff/docker-builds:melodic-perception
     steps:
       - checkout
       - run:
           name: Set Up Container
           command: |
-            apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
+            apt-get update -qq
             source `find /opt/ros -name setup.bash | sort | head -1`
             rosdep install --from-paths . --ignore-src -y
             cd ..
