--- a/package.xml
+++ b/package.xml
@@ -9,8 +9,9 @@
   <author email="jkale@autonomoustuff.com">Joe Kale</author>
   <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
 
-  <url type="bugtracker">https://github.com/astuff/ibeo_lux/issues</url>
+  <url type="website">http://wiki.ros.org/ibeo_lux</url>
   <url type="repository">https://github.com/astuff/ibeo_lux</url>
+  <url type="bugtracker">https://github.com/astuff/ibeo_lux/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
