roslint clean-up and passing pointers instead of shared_ptrs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ add_definitions(-std=c++11 -Wall -Wextra -DBUILD_ROS)
 
 ## Find catkin and any catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  roslint
   network_interface
   roscpp
   ibeo_core
@@ -27,8 +28,7 @@ catkin_package(CATKIN_DEPENDS
 )
 
 ## Build executables
-include_directories(
-  include/${PROJECT_NAME}
+include_directories(include
   core_ibeo/include
   ${catkin_INCLUDE_DIRS}
 )
@@ -42,6 +42,10 @@ target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
 )
 add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
+
+set(ROSLINT_CPP_OPTS "--filter=-build/namespaces")
+roslint_cpp()
+
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
