--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,11 @@ jobs:
             cd ..
             catkin build
       - run:
+          name: Lint
+          command: |
+            cd ..
+            catkin build --no-deps --make-args roslint
+      - run:
           name: Run Tests
           command: |
             cd ..
@@ -46,6 +51,11 @@ jobs:
             cd ..
             catkin build
       - run:
+          name: Lint
+          command: |
+            cd ..
+            catkin build --no-deps --make-args roslint
+      - run:
           name: Run Tests
           command: |
             cd ..
@@ -71,6 +81,11 @@ jobs:
           command: |
             cd ..
             catkin build
+      - run:
+          name: Lint
+          command: |
+            cd ..
+            catkin build --no-deps --make-args roslint
       - run:
           name: Run Tests
           command: |
