CI: Have to add packages to build with --no-deps.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,7 @@ jobs:
       - run:
           name: Lint
           command: |
-            cd ..
-            catkin build --no-deps --make-args roslint
+            catkin bt --no-deps --make-args roslint
       - run:
           name: Run Tests
           command: |
