--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,10 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            source /opt/ros/kinetic/setup.bash
             cd ..
             catkin run_tests
+            catkin_test_results
     working_directory: ~/src
 
   lunar:
@@ -56,8 +58,10 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            source /opt/ros/lunar/setup.bash
             cd ..
             catkin run_tests
+            catkin_test_results
     working_directory: ~/src
 
   melodic:
@@ -86,8 +90,10 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            source /opt/ros/melodic/setup.bash
             cd ..
             catkin run_tests
+            catkin_test_results
     working_directory: ~/src
 
 workflows:
