CI: Removing lunar. Moving roslint test.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,47 +20,11 @@ jobs:
             cd ..
             catkin build
       - run:
-          name: Lint
-          command: |
-            catkin bt --no-deps --make-args roslint
-      - run:
           name: Run Tests
           command: |
             source /opt/ros/kinetic/setup.bash
             cd ..
-            catkin run_tests
-            catkin_test_results
-    working_directory: ~/src
-
-  lunar:
-    docker:
-      - image: autonomoustuff/docker-builds:lunar-perception
-    steps:
-      - checkout
-      - run:
-          name: Set Up Container
-          command: |
-            apt-get update -qq
-            source `find /opt/ros -name setup.bash | sort | head -1`
-            rosdep install --from-paths . --ignore-src -y
-            cd ..
-            catkin init
-            catkin config --extend /opt/ros/$ROS_DISTRO
-      - run:
-          name: Build
-          command: |
-            cd ..
-            catkin build
-      - run:
-          name: Lint
-          command: |
-            catkin bt --no-deps --make-args roslint
-      - run:
-          name: Run Tests
-          command: |
-            source /opt/ros/lunar/setup.bash
-            cd ..
-            catkin run_tests
+            catkin run_tests --no-deps ibeo_lux
             catkin_test_results
     working_directory: ~/src
 
@@ -84,15 +48,11 @@ jobs:
             cd ..
             catkin build
       - run:
-          name: Lint
-          command: |
-            catkin bt --no-deps --make-args roslint
-      - run:
           name: Run Tests
           command: |
             source /opt/ros/melodic/setup.bash
             cd ..
-            catkin run_tests
+            catkin run_tests --no-deps ibeo_lux
             catkin_test_results
     working_directory: ~/src
 
@@ -101,5 +61,4 @@ workflows:
   ros_build:
     jobs:
       - kinetic
-      - lunar
       - melodic
